# esp32_develop

./: README.md
esp32-demo/: .gitignore  CMakeLists.txt  sdkconfig
esp32-demo/main/: CMakeLists.txt  bemfa.c  bemfa.h  idf_component.yml  index.html  main.c  main.h  protocol.c  protocol.h  user_http_client.c  user_http_server.c  user_nvs_rw.c  user_nvs_rw.h
esp32-projection/: CMakeLists.txt  sdkconfig
esp32-projection/components/my_rmt_transmit/: CMakeLists.txt  my_rmt_transmit.c
esp32-projection/components/my_rmt_transmit/include/: my_rmt_transmit.h
esp32-projection/main/: CMakeLists.txt  idf_component.yml  led.c  led.h  main.c  motor.c  motor.h  projection.c  projection.h  pwm.c  pwm.h  user_http_server.h
esp32ble-demo/: CMakeLists.txt  sdkconfig
esp32ble-demo/main/: CMakeLists.txt  bemfa.h  main.c  user_http_client.h
